force-app/main/default/objects/Project_Benefit__c/Project_Benefit__c.object-meta.xml
<CustomObject>
    <label>Project Benefit</label>
    <nameField>
        <label>Project Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>