force-app/main/default/objects/Project_Benefit__c/fields/Client_logo__c.field-meta.xml
<CustomField>
    <fullName>Client_logo__c</fullName>
    <label>Client logo</label>
    <type>Url</type>
</CustomField>