force-app/main/default/objects/Project_Benefit__c/fields/Graphic__c.field-meta.xml
<CustomField>
    <fullName>Graphic__c</fullName>
    <label>Graphic</label>
    <type>Url</type>
</CustomField>