force-app/main/default/objects/Project_Benefit__c/fields/Key_Issues__c.field-meta.xml
<CustomField>
    <fullName>Key_Issues__c</fullName>
    <label>Key Issues</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>