force-app/main/default/objects/Project_Benefit__c/fields/Project_Closeout__c.field-meta.xml
<CustomField>
    <fullName>Project_Closeout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Closeout</label>
    <referenceTo>Project_Closeout__c</referenceTo>
    <relationshipLabel>Project Benefits</relationshipLabel>
    <relationshipName>Project_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>