force-app/main/default/objects/Project_Benefit__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Results</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>