force-app/main/default/objects/Project_Benefit__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <label>Situation</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>