force-app/main/default/objects/Project_Benefit__c/fields/SSA_Company_Contributions__c.field-meta.xml
<CustomField>
    <fullName>SSA_Company_Contributions__c</fullName>
    <label>SSA &amp; Company Contributions</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>